syntax = "proto3";

package server;

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool exist = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool exist = 1;
  string value = 2;
}

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool exist = 1;
}

message JoinRequest {
  string addr = 1;
  string nodeID = 2;
}

message JoinResponse {
  bool joined = 1;
}


service KV {
  rpc Set (SetRequest) returns (SetResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Del (DelRequest) returns (DelResponse) {}
  rpc Join (JoinRequest) returns (JoinResponse) {}
}
